next steps to implement register and login user on frontend - need to fix confirmation link - sometimes too much calls to api is generated